--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
-NEXT_PUBLIC_APP_URL=http://localhost:3001
+NEXT_PUBLIC_API_URL=https://api.wisatajubung.com
+NEXT_PUBLIC_STORAGE_URL=https://api.wisatajubung.com/storage
+
+NEXT_PUBLIC_APP_URL=http://wisatajubung.com
 
 # Virtual Tour Specific
 NEXT_PUBLIC_VIRTUAL_TOUR_ASSETS_URL=/assets/virtual-tour
@@ -8,3 +10,4 @@ NEXT_PUBLIC_PANNELLUM_CDN=https://cdn.jsdelivr.net/npm/pannellum@2.5.6
 
 # Development
 NODE_ENV=development
+
