--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
-# API Configuration
+# URL untuk berkomunikasi dengan API backend Laravel
 NEXT_PUBLIC_API_URL=https://api.wisatajubung.com
+
+# URL untuk mengakses file yang ada di public storage Laravel
 NEXT_PUBLIC_STORAGE_URL=https://api.wisatajubung.com/storage
 
+# Aplikasi frontend URL (untuk base URL Next.js)
 NEXT_PUBLIC_APP_URL=http://wisatajubung.com
 
-# Virtual Tour Specific
+# Virtual Tour Assets URL (di luar folder assets Next.js)
 NEXT_PUBLIC_VIRTUAL_TOUR_ASSETS_URL=/assets/virtual-tour
+
+# CDN untuk Pannellum
 NEXT_PUBLIC_PANNELLUM_CDN=https://cdn.jsdelivr.net/npm/pannellum@2.5.6
 
-# Development
-NODE_ENV=development
-
+# Mode produksi
+NODE_ENV=production
