--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "critters": "^0.0.23",
     "lucide-react": "^0.537.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
