--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,10 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
-.pnp.ts
+/tmp
 
 # Next.js
 /.next/
 /out/
 
-# Production
-/build
-
 # Environment
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# OS
-.DS_Store
-*.pem
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Virtual Tour Assets (large files)
-public/assets/virtual-tour/images/
-*.jpg
-*.jpeg
-*.png
-*.webp
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+.env*
