fix drag hotspot,fix log in admin, fix update username dan password, fix log out

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # URL untuk berkomunikasi dengan API backend Laravel
-NEXT_PUBLIC_API_URL=https://api.wisatajubung.com
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
 
 # URL untuk mengakses file yang ada di public storage Laravel
-NEXT_PUBLIC_STORAGE_URL=https://api.wisatajubung.com/storage
+NEXT_PUBLIC_STORAGE_URL=http://127.0.0.1:8000/storage
 
 # Aplikasi frontend URL (untuk base URL Next.js)
-NEXT_PUBLIC_APP_URL=http://wisatajubung.com
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Virtual Tour Assets URL (di luar folder assets Next.js)
 NEXT_PUBLIC_VIRTUAL_TOUR_ASSETS_URL=/assets/virtual-tour
@@ -13,5 +13,5 @@ NEXT_PUBLIC_VIRTUAL_TOUR_ASSETS_URL=/assets/virtual-tour
 # CDN untuk Pannellum
 NEXT_PUBLIC_PANNELLUM_CDN=https://cdn.jsdelivr.net/npm/pannellum@2.5.6
 
-# Mode produksi
-NODE_ENV=production
+# Mode pengembangan
+NODE_ENV=development
