configurasi access deploy vtour

--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,8 @@
-# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION BEGIN
-PassengerAppRoot "/home/wisataju/sistem-informasi-manajemen_PMM-JEMBER/virtual-tour"
-PassengerBaseURI "/"
-PassengerNodejs "/home/wisataju/nodevenv/sistem-informasi-manajemen_PMM-JEMBER/virtual-tour/18/bin/node"
-PassengerAppType node
-PassengerStartupFile start
-# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
-
 RewriteEngine On
 # Forward all requests ke Next.js yang jalan di port 3001
 RewriteCond %{REQUEST_URI} !^/api
 RewriteCond %{REQUEST_URI} !^/storage
 RewriteRule ^(.*)$ http://127.0.0.1:3001/$1 [P,L]
-
 # Security Headers
 <IfModule mod_headers.c>
     Header always set X-Content-Type-Options nosniff
@@ -19,7 +10,6 @@ RewriteRule ^(.*)$ http://127.0.0.1:3001/$1 [P,L]
     Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
-
 # Cache Control
 <IfModule mod_expires.c>
     ExpiresActive on
@@ -31,7 +21,6 @@ RewriteRule ^(.*)$ http://127.0.0.1:3001/$1 [P,L]
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 year"
 </IfModule>
-
 # Gzip Compression
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain
@@ -44,3 +33,10 @@ RewriteRule ^(.*)$ http://127.0.0.1:3001/$1 [P,L]
     AddOutputFilterByType DEFLATE application/javascript
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
+# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION BEGIN
+PassengerAppRoot "/home/wisataju/sistem-informasi-manajemen_PMM-JEMBER/virtual-tour"
+PassengerBaseURI "/"
+PassengerNodejs "/home/wisataju/nodevenv/sistem-informasi-manajemen_PMM-JEMBER/virtual-tour/18/bin/node"
+PassengerAppType node
+PassengerStartupFile server.js
+# DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
