vtour deploy -fitur edit

--- a/.htaccess
+++ b/.htaccess
@@ -40,3 +40,4 @@ PassengerNodejs "/home/wisataju/nodevenv/sistem-informasi-manajemen_PMM-JEMBER/v
 PassengerAppType node
 PassengerStartupFile server.js
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
+# OPTIONAL: jika mau akses /api dan /storage langsung ke backend
