--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "virtual-tour-jubung",
   "version": "1.0.0",
   "private": true,
-  "description": "Virtual Tour System for Kebun Jubung - PMM Jember",
+  "description": "Virtual Tour System for Wisata Jubung - PMM Jember",
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
